Fix memory storage to handle resources with subfolders

BUG:517221